# ln-data-preparation

./: .gitignore  README.md  pyproject.toml  view.ipynb
data/: addresses.csv  bvisuals.csv  diameter.csv  fix.txt  geo.json  mempool.csv  shapes.csv  shapes.geo.csv  shapes_geo.csv
misc/: tab1.xlsx  validation.ipynb
scripts/: addresses.py  clean.py  download.py  geocode.py  geograph.py  shapes.py  slice.py  utils.py
